tests/constructor/return_value.rev
struct Foo {
    init() {
        return "result" // error: can't return a value from the constructor
    }
}